# GSRast

./: .clangd  .gitignore  .gitmodules  BBox.cpp  BBox.hpp  BasicWindow.cpp  BasicWindow.hpp  BufferGeo.cpp  BufferGeo.hpp  CMakeLists.txt  CameraBase.cpp  CameraBase.hpp  Config.cpp  Config.hpp  Database.cpp  Database.hpp  DrawBase.cpp  DrawBase.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  GSRasterWindow.cpp  GSRasterWindow.hpp  README.md  RenderTarget.cpp  RenderTarget.hpp  SamplerShader.cpp  SamplerShader.hpp  ShaderBase.cpp  ShaderBase.hpp  SimpleShader.cpp  SimpleShader.hpp  Window.cpp  Window.hpp  WindowBase.cpp  WindowBase.hpp  main.cpp  (+1 more)
apps/: CMakeLists.txt
apps/fbtest/: CMakeLists.txt  ColorfulShader.cpp  ColorfulShader.hpp  FBTestWindow.cpp  FBTestWindow.hpp  SamplerShader.cpp  SamplerShader.hpp  main.cpp
apps/fbtest/shaders/: CMakeLists.txt
apps/fbtest/shaders/colorful/: fragment.glsl  vertex.glsl
apps/fbtest/shaders/sampler/: vertex.glsl
apps/gaussianlut/: CMakeLists.txt  main.cpp
apps/gsrast/: CMakeLists.txt  CopyShader.cpp  CopyShader.hpp  CudaBuffer.cpp  CudaBuffer.hpp  DebugCamera.cpp  DebugCamera.hpp  GSEllipsoids.cpp  GSEllipsoids.hpp  GSGaussians.cpp  GSGaussians.hpp  GSPointCloud.cpp  GSPointCloud.hpp  GSRastWindow.cpp  GSRastWindow.hpp  Inspector.cpp  Inspector.hpp  OrbitalShader.cpp  OrbitalShader.hpp  PLYExplorer.cpp  PLYExplorer.hpp  PointCloudShader.cpp  PointCloudShader.hpp  RenderSelector.cpp  RenderSelector.hpp  SplatData.cpp  SplatData.hpp  SplatShader.cpp  SplatShader.hpp  main.cpp
apps/gsrast/gscuda/: AuxBuffer.cu  AuxBuffer.cuh  CMakeLists.txt  CudaHelpers.cu  CudaHelpers.cuh  GSCuda.cu  GSCuda.cuh
apps/gsrast/shaders/: CMakeLists.txt
apps/gsrast/shaders/adaptive/: vertex.glsl
apps/gsrast/shaders/copy/: fragment.glsl  vertex.glsl
apps/gsrast/shaders/splats/: fragment.glsl  vertex.glsl
apps/gsrast/shaders/splatsRef/: fragment.glsl  vertex.glsl
apps/spheretrace/: CMakeLists.txt  Cube.cpp  Cube.hpp  Ellipsoid.cpp  Ellipsoid.hpp  SphereTraceShader.cpp  SphereTraceShader.hpp  SphereTraceWindow.cpp  SphereTraceWindow.hpp  main.cpp
apps/spheretrace/shaders/: CMakeLists.txt
apps/spheretrace/shaders/st/: fragment.glsl  vertex.glsl
shaders/: CMakeLists.txt
shaders/orbital/: fragment.glsl  vertex.glsl
shaders/sampler/: fragment.glsl  vertex.glsl
shaders/simple/: fragment.glsl  vertex.glsl
